samples/_failures_safe/1761545400_4c44f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c56eeb4.c: In function ‘main’:
./samples/SAFE/__tmp_6c56eeb4.c:131:69: error: ‘MAX_D’ undeclared (first use in this function); did you mean ‘MAX_DIM’?
  131 |                 cols1 = read_int("Enter columns for matrix 1: ", 1, MAX_D
      |                                                                     ^~~~~
      |                                                                     MAX_DIM
./samples/SAFE/__tmp_6c56eeb4.c:131:69: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6c56eeb4.c:131:74: error: expected ‘)’ at end of input
  131 |                 cols1 = read_int("Enter columns for matrix 1: ", 1, MAX_D
      |                                 ~                                        ^
      |                                                                          )
./samples/SAFE/__tmp_6c56eeb4.c:131:17: error: expected declaration or statement at end of input
  131 |                 cols1 = read_int("Enter columns for matrix 1: ", 1, MAX_D
      |                 ^~~~~
./samples/SAFE/__tmp_6c56eeb4.c:131:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c56eeb4.c:131:17: error: expected declaration or statement at end of input
